; ModuleID = '/home/carl/AnghaBench/systemd/src/test/extr_test-local-addresses.c_main.c'
source_filename = "/home/carl/AnghaBench/systemd/src/test/extr_test-local-addresses.c_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.local_address = type { i32 }

@LOG_DEBUG = common dso_local global i32 0, align 4
@AF_UNSPEC = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [18 x i8] c"Local Addresses:\0A\00", align 1
@.str.1 = private unnamed_addr constant [17 x i8] c"Local Gateways:\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca %struct.local_address*, align 8
  %7 = alloca i32, align 4
  store i32 0, i32* %3, align 4
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %8 = load i32, i32* @LOG_DEBUG, align 4
  %9 = call i32 @test_setup_logging(i32 %8)
  store %struct.local_address* null, %struct.local_address** %6, align 8
  %10 = load i32, i32* @AF_UNSPEC, align 4
  %11 = call i32 @local_addresses(i32* null, i32 0, i32 %10, %struct.local_address** %6)
  store i32 %11, i32* %7, align 4
  %12 = load i32, i32* %7, align 4
  %13 = icmp sge i32 %12, 0
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert_se(i32 %14)
  %16 = call i32 @printf(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %17 = load %struct.local_address*, %struct.local_address** %6, align 8
  %18 = load i32, i32* %7, align 4
  %19 = call i32 @print_local_addresses(%struct.local_address* %17, i32 %18)
  %20 = load %struct.local_address*, %struct.local_address** %6, align 8
  %21 = call %struct.local_address* @mfree(%struct.local_address* %20)
  store %struct.local_address* %21, %struct.local_address** %6, align 8
  %22 = load i32, i32* @AF_UNSPEC, align 4
  %23 = call i32 @local_gateways(i32* null, i32 0, i32 %22, %struct.local_address** %6)
  store i32 %23, i32* %7, align 4
  %24 = load i32, i32* %7, align 4
  %25 = icmp sge i32 %24, 0
  %26 = zext i1 %25 to i32
  %27 = call i32 @assert_se(i32 %26)
  %28 = call i32 @printf(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str.1, i64 0, i64 0))
  %29 = load %struct.local_address*, %struct.local_address** %6, align 8
  %30 = load i32, i32* %7, align 4
  %31 = call i32 @print_local_addresses(%struct.local_address* %29, i32 %30)
  %32 = load %struct.local_address*, %struct.local_address** %6, align 8
  %33 = call i32 @free(%struct.local_address* %32)
  ret i32 0
}

declare dso_local i32 @test_setup_logging(i32) #1

declare dso_local i32 @local_addresses(i32*, i32, i32, %struct.local_address**) #1

declare dso_local i32 @assert_se(i32) #1

declare dso_local i32 @printf(i8*) #1

declare dso_local i32 @print_local_addresses(%struct.local_address*, i32) #1

declare dso_local %struct.local_address* @mfree(%struct.local_address*) #1

declare dso_local i32 @local_gateways(i32*, i32, i32, %struct.local_address**) #1

declare dso_local i32 @free(%struct.local_address*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
